fix overflow, add tooltips and fix type space menu

--- a/frontend_app_workspace_advanced/src/css/index.styl
+++ b/frontend_app_workspace_advanced/src/css/index.styl
@@ -130,6 +130,8 @@
         color offWhite
     &__empty
       margin 25px
+    &__userInfo
+      width calc(100% - 180px)
 .workspace_advanced__popup
   .cardPopup__container
     width 400px
