--- a/frontend_lib/src/component/UserInfo/UserInfo.styl
+++ b/frontend_lib/src/component/UserInfo/UserInfo.styl
@@ -6,6 +6,12 @@
   flex 1
   &__name
     margin-left 10px
+    width calc(100% - 50px)
+    text-overflow ellipsis
+    overflow hidden
+    white-space nowrap
   &__username
     font-size fontSizeSmall
     color mediumDarkGrey
+    text-overflow ellipsis
+    overflow hidden
